--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=464,594
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=348,327
-Size=3741,1883
+Pos=1891,72
+Size=1780,1791
 Collapsed=0
 
 [Window][Example: Assets Browser]
@@ -99,8 +99,13 @@ Size=641,256
 Collapsed=0
 
 [Window][my_font]
-Pos=2199,703
-Size=1521,1207
+Pos=353,181
+Size=3004,1596
+Collapsed=0
+
+[Window][gameFont]
+Pos=10,59
+Size=1793,1715
 Collapsed=0
 
 [Table][0xB6880529,2]
@@ -108,10 +113,10 @@ RefScale=20
 Column 0  Sort=0v
 
 [Table][0xEA44DE71,3]
-RefScale=20
+RefScale=39
 Column 0  Weight=1.0000
-Column 1  Width=132
-Column 2  Width=198
+Column 1  Width=257
+Column 2  Width=386
 
 [Table][0x2048C668,2]
 RefScale=20
@@ -124,6 +129,96 @@ Column 0  Width=44 Sort=0v
 Column 1  Width=66
 Column 2  Width=66
 Column 3  Weight=1.0000
+
+[Table][0x51D6F5EA,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE102187A,3]
+RefScale=39
+Column 0  Width=189
+Column 1  Width=189
+Column 2  Width=189
+
+[Table][0xF1421304,3]
+RefScale=39
+Column 0  Width=189
+Column 1  Width=189
+Column 2  Weight=1.0000
+
+[Table][0xE212E0F0,6]
+RefScale=39
+Column 0  Width=189
+Column 1  Width=189
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x86C9FC97,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x95990F63,3]
+RefScale=39
+Column 0  Width=189
+Column 1  Width=189
+Column 2  Width=189
+
+[Table][0x127BEAD2,7]
+RefScale=39
+Column 0  Width=147
+Column 1  Width=337
+Column 2  Width=337
+Column 3  Width=337
+Column 4  Width=337
+Column 5  Width=337
+Column 6  Width=337
+
+[Table][0xEB78AB2C,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x603C335E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA6C6558A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x29CD9FF7,3]
+
+[Table][0x369EB90F,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x2ACCE68A,3]
+RefScale=39
+Column 0  Width=234
+Column 1  Width=234
+Column 2  Width=234
+
+[Table][0x302651AD,14]
+RefScale=39
+Column 0  Width=168
+Column 1  Width=48
+Column 2  Width=48
+Column 3  Width=48
+Column 4  Width=48
+Column 5  Width=48
+Column 6  Width=48
+Column 7  Width=48
+Column 8  Width=48
+Column 9  Width=48
+Column 10 Width=48
+Column 11 Width=48
+Column 12 Width=48
+Column 13 Width=48
 
 [Docking][Data]
 
