--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=464,594
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=2243,221
+Pos=1113,117
 Size=1562,1791
 Collapsed=0
 
@@ -99,13 +99,43 @@ Size=641,256
 Collapsed=0
 
 [Window][my_font]
-Pos=27,40
-Size=2072,1838
+Pos=362,173
+Size=2071,1838
 Collapsed=0
 
 [Window][gameFont]
 Pos=10,59
 Size=1793,1715
+Collapsed=0
+
+[Window][GameFont]
+Pos=60,60
+Size=2076,1514
+Collapsed=0
+
+[Window][mpfont]
+Pos=329,97
+Size=2216,1374
+Collapsed=0
+
+[Window][C:\Projects\Madpuppet\_MPFont\gameFont.vfnt]
+Pos=60,60
+Size=2072,1208
+Collapsed=0
+
+[Window][Another]
+Pos=457,431
+Size=2090,1298
+Collapsed=0
+
+[Window][C:\Projects\Madpuppet\_MPFont\smallFont.vfnt]
+Pos=197,783
+Size=2123,594
+Collapsed=0
+
+[Window][sfsdf]
+Pos=628,163
+Size=2099,1217
 Collapsed=0
 
 [Table][0xB6880529,2]
