--- a/mpfont.ini
+++ b/mpfont.ini
@@ -1,5 +1,7 @@
 FontScale:1.5
-WindowHeight:2054
-WindowWidth:3840
-WindowX:0
-WindowY:34
+WindowHeight:1514
+WindowWidth:2880
+WindowX:-2880
+WindowY:819
+project:C:\Projects\Madpuppet\_MPFont\gameFont.vfnt
+project:C:\Projects\Madpuppet\_MPFont\smallFont.vfnt
