--- a/MPFont.vcxproj.filters
+++ b/MPFont.vcxproj.filters
@@ -316,6 +316,9 @@
     <ClInclude Include="source\settings.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\SHAD.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\imgui\imgui.cpp">
@@ -346,6 +349,9 @@
       <Filter>TinyDialog</Filter>
     </ClCompile>
     <ClCompile Include="source\settings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\SHAD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
