--- a/MPFont.vcxproj.filters
+++ b/MPFont.vcxproj.filters
@@ -319,6 +319,12 @@
     <ClInclude Include="source\SHAD.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\Project.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\types.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\imgui\imgui.cpp">
@@ -352,6 +358,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\SHAD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Project.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
