--- a/MPFont.vcxproj
+++ b/MPFont.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="source\Atlas.h" />
     <ClInclude Include="source\imgui\imconfig.h" />
     <ClInclude Include="source\imgui\imgui.h" />
     <ClInclude Include="source\imgui\imgui_impl_sdl2.h" />
@@ -140,6 +141,7 @@
     <ClInclude Include="source\imgui\imstb_textedit.h" />
     <ClInclude Include="source\imgui\imstb_truetype.h" />
     <ClInclude Include="source\main.h" />
+    <ClInclude Include="source\PixelBlock.h" />
     <ClInclude Include="source\Project.h" />
     <ClInclude Include="source\sdl2\include\begin_code.h" />
     <ClInclude Include="source\sdl2\include\close_code.h" />
@@ -234,8 +236,10 @@
     <ClInclude Include="source\SHAD.h" />
     <ClInclude Include="source\tinydialog\tinyfiledialogs.h" />
     <ClInclude Include="source\types.h" />
+    <ClInclude Include="source\WorkerFarm.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\Atlas.cpp" />
     <ClCompile Include="source\imgui\imgui.cpp" />
     <ClCompile Include="source\imgui\imgui_demo.cpp" />
     <ClCompile Include="source\imgui\imgui_draw.cpp" />
@@ -244,10 +248,12 @@
     <ClCompile Include="source\imgui\imgui_tables.cpp" />
     <ClCompile Include="source\imgui\imgui_widgets.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\PixelBlock.cpp" />
     <ClCompile Include="source\Project.cpp" />
     <ClCompile Include="source\settings.cpp" />
     <ClCompile Include="source\SHAD.cpp" />
     <ClCompile Include="source\tinydialog\tinyfiledialogs.c" />
+    <ClCompile Include="source\WorkerFarm.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source\imgui\imgui.ini" />
