reworked to be simpler to use and async
all fonts are just rendered to 512 size and shrunk to the size you want.  This makes choosing an output size quick and saves having to messa bout with a sdf range. It always just renders to 512 and does a 32 pixel SDF range,  then bicubic scales down to whatever output size you want up to 64 pixels high.

--- a/MPFont.vcxproj
+++ b/MPFont.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="source\Atlas.h" />
+    <ClInclude Include="source\FontChar.h" />
     <ClInclude Include="source\imgui\imconfig.h" />
     <ClInclude Include="source\imgui\imgui.h" />
     <ClInclude Include="source\imgui\imgui_impl_sdl2.h" />
