--- a/MPFont.vcxproj.filters
+++ b/MPFont.vcxproj.filters
@@ -341,6 +341,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="source\FontChar.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\imgui\imgui.cpp">
